k8s/policies/network-policies/allow-api-to-db.yaml
---
# Permit egress from the `api` namespace to the PostgreSQL Service on 5432, and
# nothing else.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-db
  namespace: api
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 10.10.20.30/32  # db-01
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Egress
